[gd_scene load_steps=6 format=3 uid="uid://b6navnb20xork"]

[ext_resource type="PackedScene" uid="uid://beic3gevjusuj" path="res://scenes/PushableObject/pushable_object.tscn" id="1_5pv0u"]
[ext_resource type="Script" path="res://scenes/Lens_PlanoConvex/lens_plano_convex.gd" id="2_ljto7"]
[ext_resource type="Texture2D" uid="uid://ciqfgqswil4p2" path="res://scenes/Lens_PlanoConvex/focalSpot_white_16x16.png" id="3_fwnnj"]
[ext_resource type="Texture2D" uid="uid://cvb38ctmeqcy8" path="res://icon.svg" id="4_iqnky"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b5uwf"]
resource_local_to_scene = true
size = Vector2(4, 120)

[node name="LensPlanoConvex" instance=ExtResource("1_5pv0u")]
position = Vector2(88, 77)
script = ExtResource("2_ljto7")
LENS_HEIGHT = 128.0
focalLength = 128.0
lensIndex = Vector3(2.05, 2, 1.95)
focalSpriteColor = Color(0, 0, 1, 1)
isEnergizeable = false

[node name="flatFaceArea" type="Area2D" parent="Stage" index="0"]

[node name="flatFaceShape" type="CollisionShape2D" parent="Stage/flatFaceArea" index="0"]
position = Vector2(-16, 0)
shape = SubResource("RectangleShape2D_b5uwf")
debug_color = Color(1, 0, 0, 0.419608)

[node name="curveFaceArea" type="Area2D" parent="Stage" index="1"]

[node name="curveFaceShape" type="CollisionPolygon2D" parent="Stage/curveFaceArea" index="0"]
polygon = PackedVector2Array(7, -57, 8, 61, 19, 58, 25, 46, 31, 29, 34, 10, 31, -14, 25, -40, 18, -54)

[node name="LensOutline" type="Polygon2D" parent="Stage" index="2"]
color = Color(0.0705882, 0.619608, 1, 0.501961)

[node name="frontFocus" type="Sprite2D" parent="Stage" index="3"]
z_index = 1
position = Vector2(128, 0)
texture = ExtResource("3_fwnnj")

[node name="rearFocus" type="Sprite2D" parent="Stage" index="4"]
z_index = 1
position = Vector2(-128, 0)
texture = ExtResource("3_fwnnj")

[node name="Sprite2D" type="Sprite2D" parent="." index="5"]
visible = false
scale = Vector2(0.1, 0.1)
texture = ExtResource("4_iqnky")

[node name="Sprite2D2" type="Sprite2D" parent="." index="6"]
visible = false
scale = Vector2(0.05, 0.05)
texture = ExtResource("4_iqnky")

[node name="Sprite2D3" type="Sprite2D" parent="." index="7"]
visible = false
scale = Vector2(0.1, 0.1)
texture = ExtResource("4_iqnky")

[node name="Line2D" type="Line2D" parent="." index="8"]
visible = false
points = PackedVector2Array(0, -64, 0, 64)
width = 2.0
